--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -84,7 +84,7 @@ html {
 }
 
 .app-card {
-  @apply max-w-sm bg-white border border-red-100 rounded-lg shadow-sm hover:bg-red-50 hover:border-red-200;
+  @apply bg-white border border-red-100 rounded-lg shadow-sm hover:bg-red-50 hover:border-red-200;
 }
 
 .app-card-heading {
